Add slf4j logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# Уровень логирования для корневого логгера
+logging.level.root=INFO
+
+# Уровень логирования для конкретного пакета
+logging.level.com.example.demo=DEBUG
+
+# Файл для вывода логов
+logging.file.name=logs/app.log
