Add amplicode, liquid base
Signed-off-by: sisdrug <danik2004sabancev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:8889/NativeReact
+spring.datasource.url=jdbc:mysql://localhost:8889/bank
 #http://localhost:8888/NativeReact
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 # Уровень логирования для корневого логгера
 logging.level.root=INFO
@@ -13,3 +13,5 @@ logging.level.com.example.demo=DEBUG
 
 # Файл для вывода логов
 logging.file.name=logs/app.log
+spring.sql.init.schema-locations=classpath*:db/schema.sql
+spring.sql.init.data-locations=classpath*:db/data.sql
