--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ logging.level.com.example.demo=DEBUG
 logging.file.name=logs/app.log
 spring.sql.init.schema-locations=classpath*:db/schema.sql
 spring.sql.init.data-locations=classpath*:db/data.sql
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
