change Post Patch methods
Signed-off-by: sisdrug <danik2004sabancev@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ build/
 /webapp/src/themes/amplicodeTheme/types.d.ts
 /webapp/vite.config.ts
 /webapp/src/vite-env.d.ts
+/logs/app.log.2025-02-18.0.gz
