--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.file.name=logs/app.log
 spring.sql.init.schema-locations=classpath*:db/schema.sql
 spring.sql.init.data-locations=classpath*:db/data.sql
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+
+spring.jpa.show-sql=true
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+
